# weather-system

api/: pyproject.toml
dashboard/: pyproject.toml
etl/: pyproject.toml
ml-core/: pyproject.toml
ml-training/: pyproject.toml
