[tool.poetry]
name = "ml-training"
version = "0.1.0"
description = ""
authors = ["Ewa Radomska <ewa.radomska@codeclusive.io>"]
readme = "README.md"
packages = [{include = "ml_training"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
